--- a/public/projects.html
+++ b/public/projects.html
@@ -118,19 +118,19 @@
        <!-- Memory Echo project -->
        <p><a name="memoryecho"></a>
 
-       <p class="lead"><h1>Working on a project called Memory Echo.</h1>
+       <p class="lead"><h1>Working on a project called <a href="http://www.memoryecho.com" target="_blank">Memory Echo</a>.</h1>
 
-       <p>Musicians collaboration on music and resources for electronic music in the bay.
+       <p>Musicians and producers collaboration with music and art ideas and resources for electronic music in the bay.
 
-       <p>Started out as a group of friends making music, plan to release a compilation soon.
+       <p>Started out as a group of friends just making music, plan to release a compilation soon.
 
 
        <!-- Your Idea Space project -->
        <p><a name="yourideaspace"></a>
 
-       <p class="lead"><h1>Working on a project called Your Idea Space.</h1>
+       <p class="lead"><h1>Working on a project called <a href="http://www.yourideaspace.com" target="_blank">Your Idea Space</a>.</h1>
 
-       <p>Started out as a way to build and design websites dynamically using by building a framework.
+       <p>Started out as a way to build and design websites dynamically using a website building a framework I started in 2000.
 
 
       </div>
