--- a/public/projects.html
+++ b/public/projects.html
@@ -112,7 +112,7 @@
 
        <p class="lead">Under Windows 10 and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution
       
-       <p>Installed the NVIDIA GeForce GT 730 with no major issues
+       <p>Installed the NVIDIA GeForce GT 730 with no major issues, playing Steep a snowboarding game and Unreal Engine is working well.
 
 
        <!-- Memory Echo project -->
