--- a/public/projects.html
+++ b/public/projects.html
@@ -110,10 +110,10 @@
 
        <p class="lead">Working on a project with my old thinkpad to install a external GPU.
 
-       <p class="lead">Under Windows 10 and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution
-      
-       <p>Installed the NVIDIA GeForce GT 730 with no major issues, playing Steep a snowboarding game and Unreal Engine is working well.
+       <p class="lead">Installed the NVIDIA GeForce GT 730 with no major issues, playing Steep a snowboarding game and Unreal Engine is working well.
 
+       <p>Under Windows 10 and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution
+      
 
        <!-- Memory Echo project -->
        <p><a name="memoryecho"></a>
