details about t420 and eGPU

--- a/public/projects.html
+++ b/public/projects.html
@@ -112,10 +112,11 @@
 
        <p class="lead">Installed the NVIDIA GeForce GT 730 with no major issues, playing Steep a snowboarding game and Unreal Engine is working well.
 
-       <p>Under Windows 10 and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution.
+       <p>Under Windows 10 and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution, yes of course I have Ubuntu installed via Windows store.
 
        <p>Some interesting info: The smart card must be set to generation 1 in bios and usually only works after reboot took me a while of tinkering to get it working. 
-      
+
+       <p>The best think about this laptop is replaceable battery (no screws) and easy access to replace the ssd drive (one screw).
 
        <!-- Memory Echo project -->
        <p><a name="memoryecho"></a>
