thinkpad with egpu

--- a/public/projects.html
+++ b/public/projects.html
@@ -108,13 +108,11 @@
 
        <p class="lead"><h1>Thinkpad t420 External GPU with GDC Beast Nvidia GT 730</h1>
 
-       <p class="lead">Working on a project with my old thinkpad to install a external GPU.
-
        <p class="lead">Installed the Nvidia GeForce GT 730 with no major issues, playing Steep a snowboarding game and Unreal Engine is working well.
 
-       <p>Under Windows 10 (hey the laptop came with Windows 10) and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution, yes of course I have Ubuntu installed via Windows store.
+       <p>Under Windows 10 and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution, and have Ubuntu installed via Windows store.
 
-       <p>Some interesting info: The smart card must be set to generation 1 in bios and usually only works after reboot took me a while of tinkering to get it working also first used an old power supply to power then got the Dell DA-2. 
+       <p>Some interesting info: The smart card must be set to generation 1 in bios and took me a while of tinkering to get it working. First used an old power supply to power the GPU then got the Dell DA-2. 
 
        <p>The best thing about this laptop is replaceable battery (no screws) and easy access to replace the ssd drive (one screw) and ram and cpu upgrades.
 
