--- a/public/projects.html
+++ b/public/projects.html
@@ -108,7 +108,7 @@
 
        <p class="lead"><h1>Thinkpad t420 External GPU with GDC Beast Nvidia GT 730</h1>
 
-       <p class="lead">Installed the Nvidia GeForce GT 730 with no major issues, playing Steep a snowboarding game and Unreal Engine is working well.
+       <p class="lead">Installed the Nvidia GeForce GT 730 with no major issues, playing Dark Souls and Steep a snowboarding game and Unreal Engine is working well.
 
        <p>Under Windows 10 and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution, and have Ubuntu installed via Windows store.
 
@@ -123,8 +123,7 @@
 
        <p>Musicians and producers collaboration with music and art ideas and resources for electronic music in the bay.
 
-       <p>Started out as a group of friends just making music, plan to release a compilation soon.
-
+       <p>Started out as a group of friends just making music: <a href="https://memoryechomusic.bandcamp.com/releases" target="_blank">Download compilation released Feb 2018</a>
 
        <!-- Your Idea Space project -->
        <p><a name="yourideaspace"></a>
@@ -132,7 +131,6 @@
        <p class="lead"><h1>Working on a project called <a href="http://www.yourideaspace.com" target="_blank">Your Idea Space</a>.</h1>
 
        <p>Started out as a way to build and design websites dynamically using a website building a framework I started in 2000.
-
 
       </div>
 
