--- a/public/projects.html
+++ b/public/projects.html
@@ -82,7 +82,7 @@
 
        <p class="lead">I use Ardour for audio recording on Linux for my studio and Blender, Krita and Gimp for artwork. Steam works really well and there are many great Linux games. 
 
-       <p class="lead"> The M-Audio Delta PCI card is not new but also is known for a very stable reliable card.
+       <p class="lead"> The M-Audio Delta PCI card is not new but also is known for being a very stable reliable card.
 
        <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card
 
@@ -106,13 +106,13 @@
        <!-- thinkpad project -->
        <p><a name="thinkpad-t420"></a>
 
-       <p class="lead"><h1>Thinkpad t420 External GPU with GDC Beast Nvidia GT 730</h1>
+       <p class="lead"><h1>Thinkpad t420 eGPU with GDC Beast Nvidia GT 730</h1>
 
-       <p class="lead">Installed the Nvidia GeForce GT 730 with no major issues, playing Dark Souls and Steep a snowboarding game and Unreal Engine is working well, impressed with how Windows 10 handles the EGPU.
+       <p class="lead">Installed the Nvidia GeForce GT 730 with no major issues, playing Dark Souls and Steep a snowboarding game and Unreal Engine is working well, impressed with how Windows 10 handles the eGPU.
 
        <p>Under Windows 10 and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution, and have Ubuntu installed via Windows store.
 
-       <p>Some interesting info: The smart card must be set to generation 1 in bios and took me a while of tinkering to get it working, after that though no issues whatsoever. First used an old power supply to power the GPU then got the Dell DA-2 for about 15 dollars which I recommend to power everything. 
+       <p>Some interesting info: The smart card must be set to generation 1 in bios and took me a while of tinkering to get it working, after that though no issues whatsoever. First used an old power supply to power the eGPU then got the Dell DA-2 for about 15 dollars which I recommend to power everything. 
 
        <p>The best thing about this laptop is replaceable battery (no screws) and easy access to replace the ssd drive (one screw), replaced the SSD and works with Windows 10 and Linux (dev server) well and possibilities for ram and cpu upgrades.
 
