--- a/public/projects.html
+++ b/public/projects.html
@@ -69,6 +69,7 @@
        <br><a href="#thinkpad-t420">Thinkpad t420</a>
        <br><a href="#memoryecho">Memory Echo</a>
        <br><a href="#yourideaspace">Your Idea Space</a>
+       <br><a href="#monitoring">Monitoring</a>
 
        <!-- content -->
       
@@ -132,6 +133,13 @@
 
        <p>Started out as a way to build and design websites dynamically using a website building a framework I started in 2000.
 
+       <!-- Monitoring project -->
+       <p><a name="monitoring"></a>
+
+       <p class="lead"><h1>I use Icinga, Grafana, Prometheous and Nagios for monitoring</h1>
+
+       <p> I am also familliar with DataDog but always looking to control my own metrics and monitroing systems and automate everything. Check out <a href="https://github.com/electronicsleep/AutoIcinga" target="_blank">AutoIcinga</a> and <a href="https://github.com/electronicsleep/AutoNagios" target=
+"_blank">AutoNagios</a>.
       </div>
 
     </div><!-- /.container -->
