--- a/public/projects.html
+++ b/public/projects.html
@@ -138,7 +138,7 @@
 
        <p class="lead"><h1>I use Icinga, Grafana, Prometheous and Nagios for monitoring</h1>
 
-       <p> I am also familliar with DataDog but always looking to control my own metrics and monitroing systems and automate everything. Check out <a href="https://github.com/electronicsleep/AutoIcinga" target="_blank">AutoIcinga</a> and <a href="https://github.com/electronicsleep/AutoNagios" target=
+       <p> I am also familliar with DataDog and always looking to control my own metrics and monitroing systems and automate everything. Check out <a href="https://github.com/electronicsleep/AutoIcinga" target="_blank">AutoIcinga</a> and <a href="https://github.com/electronicsleep/AutoNagios" target=
 "_blank">AutoNagios</a>.
       </div>
 
