--- a/public/projects.html
+++ b/public/projects.html
@@ -136,9 +136,9 @@
        <!-- Monitoring project -->
        <p><a name="monitoring"></a>
 
-       <p class="lead"><h1>I use Icinga, Grafana, Prometheous and Nagios for monitoring</h1>
+       <p class="lead"><h1>I use Icinga, Grafana, Prometheus and Nagios for monitoring</h1>
 
-       <p> I am also familliar with DataDog and always looking to control my own metrics and monitroing systems and automate everything. Check out <a href="https://github.com/electronicsleep/AutoIcinga" target="_blank">AutoIcinga</a> and <a href="https://github.com/electronicsleep/AutoNagios" target=
+       <p> I am also familliar with DataDog and always looking to control my own metrics and monitroing systems and automate everything, currently working on graphing all Icinga metrics. Check out <a href="https://github.com/electronicsleep/AutoIcinga" target="_blank">AutoIcinga</a> and <a href="https://github.com/electronicsleep/AutoNagios" target=
 "_blank">AutoNagios</a>.
       </div>
 
