--- a/public/projects.html
+++ b/public/projects.html
@@ -69,6 +69,7 @@
        <br><a href="#thinkpad-t420">Thinkpad t420</a>
        <br><a href="#memoryecho">Memory Echo</a>
        <br><a href="#yourideaspace">Your Idea Space</a>
+       <br><a href="#ansible">AnsibleExamples</a>
        <br><a href="#monitoring">Monitoring</a>
 
        <!-- content -->
@@ -133,12 +134,20 @@
 
        <p>Started out as a way to build and design websites dynamically using a website building a framework I started in 2000.
 
+
+       <!-- AnsibleExamples project -->
+       <p><a name="ansible"></a>
+
+       <p class="lead"><h1>Ansible and Python Examples</h1>
+
+       <p>Created a repo for training and showing others how to use Ansible and Python, they are powerful tools to do system automation and orchestration. I am happy to do talks and conferences to share knowledge. Check out the repo: <a href="https://github.com/electronicsleep/AnsibleExamples" target="_blank">AnsibleExamples</a> and <a href="http://www.yourideaspace.com/contact" target="_blank">Contact me</a>.
+
        <!-- Monitoring project -->
        <p><a name="monitoring"></a>
 
        <p class="lead"><h1>I use Icinga, Grafana, Prometheus and Nagios for monitoring</h1>
 
-       <p> I am also familliar with DataDog and always looking to control my own metrics and monitroing systems and automate everything, currently working on graphing all Icinga metrics. Check out <a href="https://github.com/electronicsleep/AutoIcinga" target="_blank">AutoIcinga</a> and <a href="https://github.com/electronicsleep/AutoNagios" target=
+       <p> I am also familliar with DataDog, NewRelic but always looking to control my own metrics and monitroing systems to further automate, currently working on graphing all Icinga metrics in Grafite. Check out <a href="https://github.com/electronicsleep/AutoIcinga" target="_blank">AutoIcinga</a> and <a href="https://github.com/electronicsleep/AutoNagios" target=
 "_blank">AutoNagios</a>.
       </div>
 
