--- a/public/projects.html
+++ b/public/projects.html
@@ -147,7 +147,7 @@
 
        <p class="lead"><h1>I use Icinga, Grafana, Prometheus and Nagios for monitoring</h1>
 
-       <p> I am also familliar with DataDog, NewRelic but always looking to control my own metrics and monitroing systems to further automate, currently working on graphing all Icinga metrics in Grafite. Check out <a href="https://github.com/electronicsleep/AutoIcinga" target="_blank">AutoIcinga</a> and <a href="https://github.com/electronicsleep/AutoNagios" target=
+       <p> I am also familliar with DataDog, NewRelic but always looking to control my own metrics and monitroing systems to further automate, currently working on graphing all Icinga metrics in Grafana. Check out <a href="https://github.com/electronicsleep/AutoIcinga" target="_blank">AutoIcinga</a> and <a href="https://github.com/electronicsleep/AutoNagios" target=
 "_blank">AutoNagios</a>.
       </div>
 
