--- a/public/projects.html
+++ b/public/projects.html
@@ -61,7 +61,7 @@
 
        <h1>Projects</h1>
 
-       <img src="images/240px-Tux.png" width="240">
+       <img src="images/debian.png" width="240">
 
        <p clear="all"/>
 
