--- a/public/about.html
+++ b/public/about.html
@@ -65,7 +65,7 @@
         <img src="images/electronicsleep-trukee.png" width="350">
         </a>
 
-        <p class="lead">Born in Arizona and moved to the SF Bay Area in 2011. I am a software engineer and electroic musician that enjoys learning about the creative side of computing.
+        <p class="lead">Born in Arizona and moved to the SF Bay Area in 2011. I am a software engineer and electronic musician that enjoys learning about the creative side of computing.
 
       </div>
 
