--- a/public/apple.html
+++ b/public/apple.html
@@ -61,7 +61,7 @@
 
        <h1>Apple</h1>
 
-       <img src="images/Apple-Logo-rainbow.png" width="240">
+       <a href="https://developer.apple.com/opensource/" target="_blank"><img src="images/Apple-Logo-rainbow.png" width="240"></a>
 
        <p class="lead">Started working on the Apple platform after they adopted the BSD UNIX core for MacOS and bought my first macbook for creative work. I am amazed at the creative software written for the Mac platform. I started learning about Objective C after buying my first Mac and always learning new things on the platform.
 
