--- a/public/projects.html
+++ b/public/projects.html
@@ -61,9 +61,10 @@
 
        <h1>Projects</h1>
 
-       <img src="images/debian.png" width="240">
+       <a href="https://debian.org" target="_blank"><img src="images/debian.png" width="240"></a>
 
        <p clear="all"/>
+       Projects use Debian OS
 
        <a href="#linux-tower">Linux Tower</a>
        <br><a href="#thinkpad-t420">Thinkpad t420</a>
