links for images

--- a/public/projects.html
+++ b/public/projects.html
@@ -64,7 +64,7 @@
        <a href="https://debian.org" target="_blank"><img src="images/debian.png" width="240"></a>
 
        <p clear="all"/>
-       Projects use Debian OS
+       <h2>Projects use Debian OS</h2>
 
        <a href="#linux-tower">Linux Tower</a>
        <br><a href="#thinkpad-t420">Thinkpad t420</a>
