--- a/public/linux.html
+++ b/public/linux.html
@@ -61,7 +61,10 @@
 
        <h1>Linux</h1>
 
+       <a href="https://www.kernel.org/" target="_blank">
        <img src="images/240px-Tux.png" width="240">
+       <h2>kernel.org</h2>
+       </a>
 
        <p class="lead">I would say my favorite thing about Linux is programming on the platform. Recently I have been learning graphics with SDL2/OpenGL and different graphics under Linux. I graviated towards the platform due to the command line and the vast information about programming and knowledge available.
 
