--- a/public/projects.html
+++ b/public/projects.html
@@ -61,7 +61,10 @@
 
        <h1>Projects</h1>
 
-       <a href="https://debian.org" target="_blank"><img src="images/debian.png" width="240"></a>
+       <a href="https://debian.org" target="_blank">
+       <img src="images/debian.png" width="240">
+       <h2>debian.org</h2>
+       </a>
 
        <p clear="all"/>
        <h2>Projects use Debian OS</h2>
