updates to links and projects

--- a/public/projects.html
+++ b/public/projects.html
@@ -63,15 +63,19 @@
 
        <a href="https://debian.org" target="_blank">
        <img src="images/debian.png" width="240">
-       <h2>debian.org</h2>
+       <h3>debian.org</h3>
        </a>
 
        <p clear="all"/>
-       <h2>Projects use Debian OS</h2>
+       <h2>Debian OS Projects</h2>
 
        <a href="#linux-tower">Linux Tower</a>
        <br><a href="#thinkpad-t420">Thinkpad t420</a>
        <br><a href="#memoryecho">Memory Echo</a>
+       <br><a href="#mediapi">MediaPi</a>
+       <br><a href="#debiandesktop">DebianDesktop</a>
+       <br><a href="#electronicsleep">ElectronicSleep</a>
+       <br><a href="#systemcapture">SystemCapture</a>
        <br><a href="#yourideaspace">Your Idea Space</a>
        <br><a href="#ansible">AnsibleExamples</a>
        <br><a href="#monitoring">Monitoring</a>
@@ -82,7 +86,7 @@
        <!-- tower project -->
        <p><a name="linux-tower"></a>
 
-       <p class="lead"><h1>Linux Tower / Nvidia GTX 950 GPU / M-Audio 1010LT </h1>
+       <p class="lead"><h3>Linux Tower / Nvidia GTX 950 GPU / M-Audio 1010LT </h3>
 
        <p class="lead">In 2016 I built a affordable and powerful Debian/GNU Linux desktop computer for audio recording, games and 3D graphics, thought I would share my hardware info. Everything works well with Linux.
 
@@ -112,7 +116,7 @@
        <!-- thinkpad project -->
        <p><a name="thinkpad-t420"></a>
 
-       <p class="lead"><h1>Thinkpad t420 eGPU with GDC Beast Nvidia GT 730</h1>
+       <p class="lead"><h3>Thinkpad t420 eGPU with GDC Beast Nvidia GT 730</h3>
 
        <p class="lead">Installed the Nvidia GeForce GT 730 with no major issues, playing Dark Souls and Steep a snowboarding game and Unreal Engine is working well, impressed with how Windows 10 handles the eGPU.
 
@@ -125,16 +129,49 @@
        <!-- Memory Echo project -->
        <p><a name="memoryecho"></a>
 
-       <p class="lead"><h1>Working on a project called <a href="http://www.memoryecho.com" target="_blank">Memory Echo</a>.</h1>
+       <p class="lead"><h3>Working on a project called <a href="http://www.memoryecho.com" target="_blank">Memory Echo</a>.</h3>
 
        <p>Musicians and producers collaboration with music and art ideas and resources for electronic music in the bay.
 
        <p>Started out as a group of friends just making music: <a href="https://memoryechomusic.bandcamp.com/releases" target="_blank">Download compilation released Feb 2018</a>
 
+
+       <!-- MediaPi -->
+       <p><a name="mediapi"></a>
+
+       <p class="lead"><h3>Created a project <a href="https://github.com/electronicsleep/MediaPi" target="_blank">MediaPi</a>.</h3>
+
+       <p>A way to show your videos or images at boot and rotate through your favorite clips.
+
+
+       <!-- DebianDesktop -->
+       <p><a name="debiandesktop"></a>
+
+       <p class="lead"><h3>DebianDesktop <a href="https://github.com/electronicsleep/DebianDesktop" target="_blank">DebianDesktop</a>.</h3>
+
+       <p> One line script to install a system with powerful tools, some extras too.
+
+
+       <!-- ElectronicSleep -->
+       <p><a name="electronicsleep"></a>
+
+       <p class="lead"><h3>ElectronicSleep <a href="https://github.com/electronicsleep/electronicsleep" target="_blank">Electronicsleep</a>.</h3>
+
+       <p>Playing around with my song Doze Dream and C++ SDL2 graphics
+
+
+       <!-- SystemCapture -->
+       <p><a name="systemcapture"></a>
+
+       <p class="lead"><h3>Created a project <a href="https://github.com/electronicsleep/SystemCapture" target="_blank">SystemCapture</a>.</h3>
+
+       <p>Just a way to show your videos or images at boot
+
+
        <!-- Your Idea Space project -->
        <p><a name="yourideaspace"></a>
 
-       <p class="lead"><h1>Working on a project called <a href="http://www.yourideaspace.com" target="_blank">Your Idea Space</a>.</h1>
+       <p class="lead"><h3>Working on a project called <a href="http://www.yourideaspace.com" target="_blank">Your Idea Space</a>.</h3>
 
        <p>Started out as a way to build and design websites dynamically using a website building a framework I started in 2000.
 
@@ -142,14 +179,15 @@
        <!-- AnsibleExamples project -->
        <p><a name="ansible"></a>
 
-       <p class="lead"><h1>Ansible and Python Examples</h1>
+       <p class="lead"><h3>Ansible and Python Examples</h3>
 
        <p>Created a repo for training and showing others how to use Ansible and Python, they are powerful tools to do system automation and orchestration. I am happy to do talks and conferences to share knowledge. Check out the repo: <a href="https://github.com/electronicsleep/AnsibleExamples" target="_blank">AnsibleExamples</a> and <a href="http://www.yourideaspace.com/contact" target="_blank">Contact me</a>.
+
 
        <!-- Monitoring project -->
        <p><a name="monitoring"></a>
 
-       <p class="lead"><h1>Icinga, Grafana, Prometheus and Nagios for monitoring</h1>
+       <p class="lead"><h3>Icinga, Grafana, Prometheus and Nagios for monitoring</h3>
 
        <p> I am also familliar with DataDog, NewRelic but always looking to control my own metrics and monitroing systems to further automate, currently working on graphing all Icinga metrics in Grafana. Check out <a href="https://github.com/electronicsleep/AutoIcinga" target="_blank">AutoIcinga</a> and <a href="https://github.com/electronicsleep/AutoNagios" target=
 "_blank">AutoNagios</a>.
