--- a/public/apple.html
+++ b/public/apple.html
@@ -63,20 +63,18 @@
 
        <a href="https://developer.apple.com/opensource/" target="_blank">
        <img src="images/Apple-Logo-rainbow.png" width="240">
-       <h2>developer.apple.com/opensource</h2>
+       <h3>apple.com</h3>
        </a>
 
-       <h2>Apple Open Source</h2>
+       <h2>Apple</h2>
 
-       <p class="lead">Started working on the Apple platform after they adopted the BSD UNIX core for MacOS and bought my first macbook for creative work. I am amazed at the creative software written for the Mac platform. I started learning about Objective C after buying my first Mac and always learning new things on the platform.
+       <p class="lead">Started working on the Apple platform after they adopted the BSD UNIX core for MacOS and bought my first macbook for creative, programming and system work. I am amazed at the creative software written for the Mac platform. I started learning about Objective C after buying my first Mac and always learning new things on the platform.
 
-       <p class="lead">The music program called Reason is one of the Mac applications I still use today, I have written many songs with this software. It's nice to have a UNIX terminal and all the creative software available right next to each other.
+       <p class="lead">Reason is one of my favorite Mac applications I still use today, I have written many songs with this software. It's nice to have a UNIX terminal and all the creative software available right next to each other.
 
        <p class="lead">I was a holdout for the iPad but once I saw what you can do with the device in regards to music and with no room for physical synths I was happy to try it. Now I use the iPad for a sequencer, soft synths and drawing.
 
-       <p class="lead">When I was a kid I remember using an Apple ][ and playing Oregon Trail in school and I remember one of my moms friend had a classic mac, but never had my own mac as a child.
-
-       <p class="lead">When I moved to the SF Bay Area I also had the chance to work at Apple on the iCloud team after doing some work as a contractor for the company.
+       <p class="lead">When I was a kid I remember using an Apple ][ and playing Oregon Trail in school and I remember one of my moms friend had a classic mac, but never had my own mac as a child. When I moved to the SF Bay Area I also had the chance to work at Apple on the iCloud team after doing some work as a contractor for the company.
 
        <p class="lead">Currently working on an iOS app for a project I have called Memory Echo, which is a music platform for development, music and education software.
 
