updates to projects

--- a/public/projects.html
+++ b/public/projects.html
@@ -71,8 +71,8 @@
 
        <a href="#linux-tower">Linux Tower</a>
        <br><a href="#thinkpad-t420">Thinkpad t420</a>
-       <br><a href="#memoryecho">Memory Echo</a>
        <br><a href="#mediapi">MediaPi</a>
+       <br><a href="#memoryecho">Memory Echo</a>
        <br><a href="#debiandesktop">DebianDesktop</a>
        <br><a href="#electronicsleep">ElectronicSleep</a>
        <br><a href="#systemcapture">SystemCapture</a>
@@ -126,6 +126,15 @@
 
        <p>The best thing about this laptop is replaceable battery (no screws) and easy access to replace the ssd drive (one screw), replaced the SSD and works with Windows 10 and Linux (dev server) well and possibilities for ram and cpu upgrades.
 
+
+       <!-- MediaPi -->
+       <p><a name="mediapi"></a>
+
+       <p class="lead"><h3>Created a Rasberry Pi project <a href="https://github.com/electronicsleep/MediaPi" target="_blank">MediaPi</a>.</h3>
+
+       <p>A way to show your videos or images at boot on a Rasberry Pi and rotate through your favorite pics/clips.
+
+
        <!-- Memory Echo project -->
        <p><a name="memoryecho"></a>
 
@@ -134,14 +143,6 @@
        <p>Musicians and producers collaboration with music and art ideas and resources for electronic music in the bay.
 
        <p>Started out as a group of friends just making music: <a href="https://memoryechomusic.bandcamp.com/releases" target="_blank">Download compilation released Feb 2018</a>
-
-
-       <!-- MediaPi -->
-       <p><a name="mediapi"></a>
-
-       <p class="lead"><h3>Created a project <a href="https://github.com/electronicsleep/MediaPi" target="_blank">MediaPi</a>.</h3>
-
-       <p>A way to show your videos or images at boot and rotate through your favorite clips.
 
 
        <!-- DebianDesktop -->
