--- a/public/apple.html
+++ b/public/apple.html
@@ -70,11 +70,11 @@
 
        <p class="lead">Reason and Pixelmator are my favorite Mac applications I still use, I have written many songs with Reason. It's nice to have a UNIX terminal, great open source software and all the creative software available right next to each other.
 
-       <p class="lead">I was a holdout for the iPad but once I saw what you can do with the device in regards to music and with no room for physical synths I was happy to try it. Now I use the iPad for a sequencer, soft synths and drawing. I still wish the iPad was a more open device.
+       <p class="lead">I was a holdout for the iPad but once I saw what you can do with the device in regards to music and with no room for physical synths I was happy to try it. Now I use the iPad for a sequencer, soft synths and drawing. I still wish the iPad was a more open device along with more of the Apple ecosystem.
 
        <p class="lead">When I was a kid I remember using an Apple ][ and playing Oregon Trail in school and I remember one of my moms friend had a classic mac, but never had my own mac as a child. When I moved to the SF Bay Area I also had the chance to work at Apple on the iCloud team after doing some work as a contractor for the company.
 
-       <p class="lead">Currently working on an iOS app for a project I have called Memory Echo, which is a music platform for development, music and education software and also happy to train others on what I know.
+       <p class="lead">Currently working on an iOS app for a project I have called Memory Echo, which is a music platform for development, music and I have written some education software that works on the mac and also happy to train others on what I know.
 
       </div>
 
