--- a/public/projects.html
+++ b/public/projects.html
@@ -156,7 +156,7 @@
        <!-- ElectronicSleep -->
        <p><a name="electronicsleep"></a>
 
-       <p class="lead"><h3>ElectronicSleep <a href="https://github.com/electronicsleep/electronicsleep" target="_blank">Electronicsleep</a>.</h3>
+       <p class="lead"><h3>Music project <a href="https://github.com/electronicsleep/electronicsleep" target="_blank">Electronicsleep</a>.</h3>
 
        <p>Playing around with my song Doze Dream and C++ SDL2 graphics
 
