updates to project

--- a/public/projects.html
+++ b/public/projects.html
@@ -78,7 +78,7 @@
        <br><a href="#systemcapture">SystemCapture</a>
        <br><a href="#yourideaspace">Your Idea Space</a>
        <br><a href="#ansible">AnsibleExamples</a>
-       <br><a href="#monitoring">Monitoring</a>
+       <br><a href="#monitoring">Next Gen Monitoring</a>
 
        <!-- content -->
       
