--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
        <p><a href="https://www.youtube.com/watch?v=72_e-N6xUMI&t=6s" class="btn btn-info" target="_blank">Recent Video</a>
        <p><a href="https://www.soundcloud.com/electronicsleep" class="btn btn-info" target="_blank">SoundCloud</a>
        <p><a href="https://electronicsleep.bandcamp.com/" class="btn btn-info" target="_blank">BandCamp</a>
-       <p><a href="http://www.ghostsnares.com" class="btn btn-info" target="_blank">Ghost Snares</a>
+       <p><a href="http://soundcloud.com/ghostsnares" class="btn btn-info" target="_blank">Ghost Snares</a>
 
        <h2>Programming Projects:</h2>
 
