--- a/public/apple.html
+++ b/public/apple.html
@@ -74,7 +74,7 @@
 
        <p class="lead">When I was a kid I remember using an Apple ][ and playing Oregon Trail in school and I remember one of my moms friend had a classic mac, but never had my own mac as a child. When I moved to the SF Bay Area I also had the chance to work at Apple on the iCloud team after doing some work as a contractor for the company.
 
-       <p class="lead">Currently working on an iOS app for a project I have called Memory Echo, which is a music platform for development, music and I have written some education software that works on the mac and also happy to train others on what I know.
+       <p class="lead">Currently working on an iOS app for a project I have called Memory Echo, which is a music platform and I have written some education software that works on the mac and also happy to train others on what I know.
 
       </div>
 
