--- a/public/apple.html
+++ b/public/apple.html
@@ -70,7 +70,7 @@
 
        <p class="lead">Reason and Pixelmator are my favorite Mac applications I still use, I have written many songs with Reason. It's nice to have a UNIX terminal, great open source software and all the creative software available right next to each other.
 
-       <p class="lead">The iPad will never replace hardware synths although it is useful. I use the iPad for a sequencer, soft synths and drawing. I would prefer the iPad to be more open and useful computing device along with more of the Apple ecosystem. When I moved to the SF Bay Area I also had the chance to work at Apple on the iCloud team after doing some work as a contractor for the company.
+       <p class="lead">The iPad will never replace hardware synths although it is useful. I use the iPad for a sequencer, soft synths and drawing. I would prefer the iPad to be more open and useful computing device along with more of the Apple ecosystem. When I moved to the SF Bay Area I also had the chance to work at Apple on the iCloud team after doing some work as a contractor.
 
        <p class="lead">Currently working on some MacOS/iOS apps for some music projects I have written some education software that works on the mac and also happy to train others on what I know.
 
