--- a/public/index.html
+++ b/public/index.html
@@ -66,9 +66,9 @@
        <h3>electronicsleep.com</h3>
        </a>
 
-       <p class="lead"> I create music, program, take photographs and make websites and art. I collect vintage synths and make music as Electronic Sleep. I started making music with a bass guitar and a drum machine around 1996.
-
        <p class="lead">Started programming computers by making websites and programs around 1998 for my music projects and never stopped learning. I would be interested in collaborating on some creative software.
+
+       <p class="lead">Usually I am creating music, programming, take photographs and make websites and art and make music as Electronic Sleep. Started making music with a bass guitar and a drum machine around 1996.
 
        <h2>Music/Art Projects:</h2>
 
