--- a/public/apple.html
+++ b/public/apple.html
@@ -72,7 +72,9 @@
 
        <p class="lead">The iPad will never replace hardware synths although it is useful. I use the iPad for a sequencer, soft synths and drawing. I would prefer the iPad to be more open and useful computing device along with more of the Apple ecosystem. When I moved to the SF Bay Area I also had the chance to work at Apple on the iCloud team after doing some work as a contractor.
 
-       <p class="lead">Currently working on some MacOS/iOS apps for some music projects. I have written some education software that works on the mac and also happy to show what I know and do talks. GitHub: <a href="https://github.com/electronicsleep" target="_blank">github.com/electronicsleep</a>
+       <p class="lead">Currently working on some MacOS/iOS apps for some music projects. I have written some education software that works on the mac and also happy to show what I know and do talks. 
+
+       <p class="lead">Projects on GitHub: <a href="https://github.com/electronicsleep" target="_blank">github.com/electronicsleep</a>
 
       </div>
 
