--- a/public/linux.html
+++ b/public/linux.html
@@ -68,7 +68,9 @@
 
        <p class="lead">I would say my favorite thing about Linux is programming on the platform. Recently I have been learning graphics with SDL2/OpenGL and different graphics under Linux. I graviated towards the platform due to the command line and the vast information about programming and knowledge available.
 
-       <p class="lead">I use Debian mostly and CentOS due to the stablity of rpm based distro but mostly stick with Debian. I started off with slackware back in the day. I mostly use programming languages: Python, Go, Java, PHP, Node.js, Bash. Most my projects involve Linux. GitHub: <a href="https://github.com/electronicsleep" target="_blank">github.com/electronicsleep</a>
+       <p class="lead">I use Debian mostly and CentOS due to the stablity of rpm based distro but mostly stick with Debian. I started off with slackware back in the day. I mostly use programming languages: Python, Go, Java, PHP, Node.js, Bash. Most my projects involve Linux.
+ 
+       <p class="lead">Projects on GitHub: <a href="https://github.com/electronicsleep" target="_blank">github.com/electronicsleep</a>
 
       </div>
 
