--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
        <h3>electronicsleep.com</h3>
        </a>
 
-       <p class="lead">Started programming computers by making websites and programs around 1998 for my music projects and never stopped learning. I would be interested in collaborating on some creative software.
+       <p class="lead">Started programming computers by making websites and programs around 1998 for my music projects and never stopped learning. May be interested in collaborating on some creative software.
 
        <p class="lead">Usually I am creating music, programming, take photographs and make websites and art and make music as Electronic Sleep. Started making music with a bass guitar and a drum machine around 1996.
 
