--- a/public/projects.html
+++ b/public/projects.html
@@ -72,6 +72,7 @@
        <a href="#linux-tower">Linux Tower</a>
        <br><a href="#thinkpad-t420">Thinkpad t420</a>
        <br><a href="#mediapi">MediaPi</a>
+       <br><a href="#flashcards">FlashCards</a>
        <br><a href="#memoryecho">Memory Echo</a>
        <br><a href="#debiandesktop">DebianDesktop</a>
        <br><a href="#electronicsleep">ElectronicSleep</a>
@@ -133,6 +134,14 @@
        <p class="lead"><h3>Created a Rasberry Pi project <a href="https://github.com/electronicsleep/MediaPi" target="_blank">MediaPi</a>.</h3>
 
        <p>A way to show your videos or images at boot on a Rasberry Pi and rotate through your favorite pics/clips.
+
+
+       <!-- FlashCards -->
+       <p><a name="flashcards"></a>
+
+       <p class="lead"><h3>Education project <a href="https://github.com/electronicsleep/FlashCards" target="_blank">FlashCards</a>.</h3>
+
+       <p>Programming project to show a simple flash card app in different languages: C++ / Java / Python / Bash
 
 
        <!-- Memory Echo project -->
