--- a/public/index.html
+++ b/public/index.html
@@ -59,14 +59,14 @@
 
       <div class="starter-template">
 
-       <h1>Hello</h1>
+       <h1>Chris</h1>
 
        <a href="http://www.electronicsleep.com" target="_blank">
        <img src="images/electronicsleep.png" width="350">
        <h3>electronicsleep.com</h3>
        </a>
 
-       <p class="lead">Started programming computers by making websites and programs around 1998 for my music projects and never stopped learning. May be interested in collaborating on some creative software.
+       <p class="lead">Hello, started programming computers by making websites and programs around 1998 for my music projects and never stopped learning. May be interested in collaborating on some creative software.
 
        <p class="lead">Usually I am creating music, programming, take photographs and make websites and art and make music as Electronic Sleep. Started making music with a bass guitar and a drum machine around 1996.
 
