--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
 
       <div class="starter-template">
 
-       <h1>Chris</h1>
+       <h1>Home</h1>
 
        <a href="http://www.electronicsleep.com" target="_blank">
        <img src="images/electronicsleep.png" width="350">
