--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,9 @@
        <p><a href="https://www.soundcloud.com/electronicsleep" class="btn btn-info" target="_blank">SoundCloud</a>
        <p><a href="https://electronicsleep.bandcamp.com/" class="btn btn-info" target="_blank">BandCamp</a>
        <p><a href="http://soundcloud.com/ghostsnares" class="btn btn-info" target="_blank">Ghost Snares</a>
+       <p><a href="http://memoryecho.com" class="btn btn-info" target="_blank">Memory Echo</a>
+
+       <p><a href="http://m3cho.com" class="btn btn-info" target="_blank">M3cho</a>
 
        <h2>Programming Projects:</h2>
 
