--- a/public/projects.html
+++ b/public/projects.html
@@ -119,7 +119,7 @@
 
        <p class="lead"><h3>Thinkpad t420 eGPU with GDC Beast Nvidia GT 730</h3>
 
-       <p class="lead">Installed the Nvidia GeForce GT 730 with no major issues, playing Dark Souls and Steep a snowboarding game and Unreal Engine is working well, impressed with how Windows 10 handles the eGPU.
+       <p class="lead">Installed the Nvidia GeForce GT 730 on Windows 10 with no major issues, even beat Dark Souls and enjoyed playing Steep a snowboarding game and Unreal Engine is working well. Impressed with how Windows 10 handles the eGPU with little to no confuration problems. Overall this project has been an incredible value: I bought the GDC beast for $40 and the laptop for $200 and the graphics card for $60 and can play most games and Windows 10 Pro was free with the laptop.
 
        <p>Under Windows 10 and Heaven benchmark got at 706 score with max FPS of 51.4 at 1280x720 FS high resolution and have Ubuntu installed via Windows store for fun.
 
