--- a/public/projects.html
+++ b/public/projects.html
@@ -97,21 +97,21 @@
 
        <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card
 
-       <p>Intel Core BX80646I74790K i7-4790K Processor (8M Cache, up to 4.40 GHz)
+       <p>Intel Core BX80646I74790K i7-4790K Processor (8M Cache, up to 4.40 GHz) ($339)
 
-       <p>ASUS ATX DDR3 2600 LGA 1150 Motherboards Z97-A/USB 3.1
+       <p>ASUS ATX DDR3 2600 LGA 1150 Motherboards Z97-A/USB 3.1 ($130)
 
-       <p>Asus GeForce GTX 950 2GB 128-Bit GDDR5 Graphics Cards (STRIX-GTX950-DC2OC-2GD5-GAMING)
+       <p>Asus GeForce GTX 950 2GB 128-Bit GDDR5 Graphics Cards (STRIX-GTX950-DC2OC-2GD5-GAMING) ($160)
 
-       <p>PCI 300Mbps 300M 802.11b/g/n Wireless WiFi Card Adapter for Desktop PC Laptop
+       <p>PCI 300Mbps 300M 802.11b/g/n Wireless WiFi Card Adapter for Desktop PC Laptop ($13)
 
-       <p>Asus 24x DVD-RW Serial-ATA Internal OEM Optical Drive DRW-24B1ST (Black)
+       <p>Asus 24x DVD-RW Serial-ATA Internal OEM Optical Drive DRW-24B1ST (Black) ($22)
 
-       <p>Corsair Carbide Series 100R Silent Edition Quiet Mid Tower Case
+       <p>Corsair Carbide Series 100R Silent Edition Quiet Mid Tower Case ($60)
 
-       <p>Kingston HyperX FURY 16GB Kit (2x8GB) 1866MHz DDR3 CL10 DIMM - Black (HX318C10FBK2/16)
+       <p>Kingston HyperX FURY 16GB Kit (2x8GB) 1866MHz DDR3 CL10 DIMM - Black (HX318C10FBK2/16) ($74 x2)
 
-       <p>EVGA 700 B1, 80+ BRONZE 700W, Power Supply 100-B1-0700-K1
+       <p>EVGA 700 B1, 80+ BRONZE 700W, Power Supply 100-B1-0700-K1 ($50)
 
 
        <!-- thinkpad project -->
