--- a/public/projects.html
+++ b/public/projects.html
@@ -95,7 +95,7 @@
 
        <p class="lead"> The M-Audio Delta PCI card is not new but also is known for being a very stable reliable card.
 
-       <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card
+       <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card ($150)
 
        <p>Intel Core BX80646I74790K i7-4790K Processor (8M Cache, up to 4.40 GHz) ($339)
 
