--- a/public/projects.html
+++ b/public/projects.html
@@ -91,9 +91,7 @@
 
        <p class="lead">In 2016 I built a affordable and powerful Debian/GNU Linux desktop computer for audio recording, games and 3D graphics, thought I would share my hardware info. Everything works well with Linux.
 
-       <p class="lead">I use Ardour for audio recording on Linux for my studio and Blender, Krita and Gimp for artwork. Steam works really well and there are many great Linux games. 
-
-       <p class="lead"> The M-Audio Delta PCI card is not new but also is known for being a very stable reliable card.
+       <p class="lead">I use Ardour for audio recording on Linux for my studio and Blender, Krita and Gimp for artwork. Steam works really well and there are many great Linux games. The M-Audio Delta PCI card is not new but also is known for being a very stable reliable card.
 
        <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card ($150)
 
