--- a/public/projects.html
+++ b/public/projects.html
@@ -93,13 +93,13 @@
 
        <p class="lead">I use Ardour for audio recording on Linux for my studio and Blender, Krita and Gimp for artwork. Steam works really well and there are many great Linux games. The M-Audio Delta PCI card is not new but also is known for being a very stable reliable card.
 
-       <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card ($150)
 
        <p>Intel Core BX80646I74790K i7-4790K Processor (8M Cache, up to 4.40 GHz) ($339)
 
        <p>ASUS ATX DDR3 2600 LGA 1150 Motherboards Z97-A/USB 3.1 ($130)
 
        <p>Asus GeForce GTX 950 2GB 128-Bit GDDR5 Graphics Cards (STRIX-GTX950-DC2OC-2GD5-GAMING) ($160)
+       <p>Samsung 850 EVO 250GB 2.5-Inch SATA III Internal SSD (MZ-75E250B/AM) ($90)
 
        <p>PCI 300Mbps 300M 802.11b/g/n Wireless WiFi Card Adapter for Desktop PC Laptop ($13)
 
@@ -110,6 +110,12 @@
        <p>Kingston HyperX FURY 16GB Kit (2x8GB) 1866MHz DDR3 CL10 DIMM - Black (HX318C10FBK2/16) ($74 x2)
 
        <p>EVGA 700 B1, 80+ BRONZE 700W, Power Supply 100-B1-0700-K1 ($50)
+
+       <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card ($150) (optional)
+
+       <p>Total: $936 M-Audio
+
+       <p>Total: $998
 
 
        <!-- thinkpad project -->
