--- a/public/projects.html
+++ b/public/projects.html
@@ -113,10 +113,9 @@
 
        <p>M-Audio Delta PCI (DELTA 1010LT) Sound Card ($150) (optional)
 
-       <p>Total: $936 M-Audio
+       <p>Total: $936 
 
-       <p>Total: $998
-
+       <p>Total: $998 +M-Audio
 
        <!-- thinkpad project -->
        <p><a name="thinkpad-t420"></a>
